hphp/hack/test/typecheck/array/disallow_one_type_parameter_for_darray.php.exp
File "disallow_one_type_parameter_for_darray.php", line 3, characters 28-28:
A comma (',') is expected here. (Parsing[1002])
File "disallow_one_type_parameter_for_darray.php", line 3, characters 28-28:
Encountered unexpected text '>', was expecting a type hint. (Parsing[1002])
