hphp/hack/test/typecheck/array/disallow_one_type_parameter_for_darray.php
<?hh // partial

function test(): darray<int> {
  return darray[];
}
